; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/cache/extr_infra.c_setup_domain_limits.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/cache/extr_infra.c_setup_domain_limits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.infra_cache = type { i32 }
%struct.config_file = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.infra_cache*, %struct.config_file*)* @setup_domain_limits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_domain_limits(%struct.infra_cache* %0, %struct.config_file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.infra_cache*, align 8
  %5 = alloca %struct.config_file*, align 8
  store %struct.infra_cache* %0, %struct.infra_cache** %4, align 8
  store %struct.config_file* %1, %struct.config_file** %5, align 8
  %6 = load %struct.infra_cache*, %struct.infra_cache** %4, align 8
  %7 = getelementptr inbounds %struct.infra_cache, %struct.infra_cache* %6, i32 0, i32 0
  %8 = call i32 @name_tree_init(i32* %7)
  %9 = load %struct.infra_cache*, %struct.infra_cache** %4, align 8
  %10 = load %struct.config_file*, %struct.config_file** %5, align 8
  %11 = call i32 @infra_ratelimit_cfg_insert(%struct.infra_cache* %9, %struct.config_file* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.infra_cache*, %struct.infra_cache** %4, align 8
  %16 = getelementptr inbounds %struct.infra_cache, %struct.infra_cache* %15, i32 0, i32 0
  %17 = call i32 @name_tree_init_parents(i32* %16)
  store i32 1, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %13
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @name_tree_init(i32*) #1

declare dso_local i32 @infra_ratelimit_cfg_insert(%struct.infra_cache*, %struct.config_file*) #1

declare dso_local i32 @name_tree_init_parents(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
